@@ -187,6 +187,61 @@ class LanguageBe extends LanguageUtf8 {
 			}
 		}
 	}
+
+	# Convert from the nominative form of a noun to some other case
+	# Invoked with {{GRAMMAR:case|word}}
+	function convertGrammar( $word, $case ) {
+		switch ( $case ) {
+			case 'родны': # genitive
+				if ( $word == 'Вікіпэдыя' ) {
+					$word = 'Вікіпэдыі';
+				} elseif ( $word == 'ВікіСлоўнік' ) {
+					$word = 'ВікіСлоўніка';
+				} elseif ( $word == 'ВікіКнігі' ) {
+					$word = 'ВікіКніг';
+				} elseif ( $word == 'ВікіКрыніца' ) {
+					$word = 'ВікіКрыніцы';
+				} elseif ( $word == 'ВікіНавіны' ) {
+					$word = 'ВікіНавін';
+				} elseif ( $word == 'ВікіВіды' ) {
+					$word = 'ВікіВідаў';
+				}
+			break;
+			case 'вінавальны': # akusative
+				if ( $word == 'Вікіпэдыя' ) {
+					$word = 'Вікіпэдыю';
+				} elseif ( $word == 'ВікіСлоўнік' ) {
+					$word = 'ВікіСлоўнік';
+				} elseif ( $word == 'ВікіКнігі' ) {
+					$word = 'ВікіКнігі';
+				} elseif ( $word == 'ВікіКрыніца' ) {
+					$word = 'ВікіКрыніцу';
+				} elseif ( $word == 'ВікіНавіны' ) {
+					$word = 'ВікіНавіны';
+				} elseif ( $word == 'ВікіВіды' ) {
+					$word = 'ВікіВіды';
+				}
+			break;
+			case 'месны': # prepositional
+				if ( $word == 'Вікіпэдыя' ) {
+					$word = 'Вікіпэдыі';
+				} elseif ( $word == 'ВікіСлоўнік' ) {
+					$word = 'ВікіСлоўніку';
+				} elseif ( $word == 'ВікіКнігі' ) {
+					$word = 'ВікіКнігах';
+				} elseif ( $word == 'ВікіКрыніца' ) {
+					$word = 'ВікіКрыніцы';
+				} elseif ( $word == 'ВікіНавіны' ) {
+					$word = 'ВікіНавінах';
+				} elseif ( $word == 'ВікіВіды' ) {
+					$word = 'ВікіВідах';
+				}
+			break;
+		}
+
+		return $word; # this will return the original value for 'назоўны' (nominative) and all undefined case values
+	}
+
 }
 
 ?>
