@@ -227,6 +227,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 5860) Update for Indonesian language (id)
 * (bug 1120) Update for Czech language (Cs)
 * Added many missing formatNum calls
+* Added grammar function to Belarusian (be)
 
 == Compatibility ==
 
